--- a/Assignment2MVC/Views/Shared/_Layout.cshtml
+++ b/Assignment2MVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Assignment2MVC</title>
+    <title>@ViewData["Title"] - Enter a draw and win a prize.</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Assignment2MVC</a>
+                <a asp-area="" asp-controller="Home" asp-action="SubmitForm" class="navbar-brand">Enter a draw and win a prize</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="ShowSerialNumber">Keys</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="ShowSubmissions">Submissions</a></li>
                 </ul>
             </div>
         </div>
