--- a/Assignment2MVC/Views/_ViewImports.cshtml
+++ b/Assignment2MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
+﻿@using Microsoft.AspNetCore.Identity
 @using Assignment2MVC
-@using Assignment2MVC.Models
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
